name:                google-oauth2-jwt
version:             0.3.3
synopsis:            Get a signed JWT for Google Service Accounts
description:         This library implements the creation of the
                     signed JWT for Google Service Accounts.
homepage:            https://github.com/MichelBoucey/google-oauth2-jwt
license:             BSD3
license-file:        LICENSE
author:              Michel Boucey
maintainer:          michel.boucey@gmail.com
copyright:           (c) 2016-2021 - Michel Boucey
category:            Google
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >= 1.10

Tested-With: GHC ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.4 || ==9.0.1

library
  hs-source-dirs:   src
  exposed-modules:  Network.Google.OAuth2.JWT
  build-depends: 
    HsOpenSSL           >= 0.11.7 && < 0.12,
    base                >= 4.3 && < 4.17,
    bytestring          >= 0.10.12 && < 0.12,
    text                >= 1.2.3 && < 2.1,
    RSA                 >= 2.4.1 && < 2.5,
    base64-bytestring   >= 1.2.1 && < 1.3,
    unix-time           >= 0.4.7 && < 0.5
  default-language: Haskell2010
  GHC-options:      -Wall

source-repository head
  type:     git
  location: git://github.com/MichelBoucey/google-oauth2-jwt.git

